overflow hero fix

--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -2,6 +2,11 @@
     position: relative;
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
+
+    .wrapper {
+        overflow: hidden;
+    }
 }
 
 .hero__media {
@@ -10,11 +15,13 @@
     left: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
     img {
         display: block;
         width: 100%;
         height: 100%;
         object-fit: cover;
+        overflow: hidden;
     }
 }
 
